# legs

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  meson.build  meson.options  suppr.txt  version.h.in
examples/: meson.build
examples/01_hello_world/: main.cpp  meson.build
examples/02_systems/: main.cpp  meson.build
examples/03_physics/: main.cpp  meson.build
scripts/: compile_jolt.sh  get_steamworks_sdk.sh  run.sh  setup_debug.sh  setup_release.sh
src/: engine.cpp  entry.cpp  job_system_thread_pool.cpp  job_system_thread_pool.hpp  job_system_with_barrier.cpp  job_system_with_barrier.hpp  meson.build  physics.cpp  physics.hpp
src/public/legs/: collider.hpp  engine.hpp  entry.hpp  iphysics.hpp  isystem.hpp  jolt_pch.hpp  log.hpp  memory.hpp  time.hpp
src/public/legs/components/: rect.hpp  rotation.hpp  transform.hpp
src/public/legs/entity/: camera.hpp  entity.hpp  mesh_entity.hpp  physics_entity.hpp  sky.hpp
src/public/legs/geometry/: icosphere.hpp  plane.hpp
src/public/legs/renderer/: buffer.hpp  common.hpp  descriptor_set.hpp  device.hpp  instance.hpp  mesh_data.hpp  pipeline.hpp  renderer.hpp  shader.hpp  ubo.hpp  vma_usage.hpp
src/public/legs/shaders/: fullscreen_frag.frag  fullscreen_vert.vert  lit_pnc_frag.frag  lit_pnc_vert.vert  sky_frag.frag  sky_vert.vert  unlit_pc_frag.frag  unlit_pc_vert.vert
src/public/legs/shaders/include/: lighting.glsl  ubo.glsl  util.glsl  vertex_p.glsl  vertex_pc.glsl  vertex_pnc.glsl
src/public/legs/ui/: ui.hpp
src/public/legs/window/: input.hpp  window.hpp
src/public/legs/world/: world.hpp
src/renderer/: buffer.cpp  descriptor_set.cpp  device.cpp  instance.cpp  renderer.cpp  vma_usage.cpp
src/ui/: ui.cpp
src/window/: window.cpp
src/world/: world.cpp
